@@ -19,6 +19,8 @@
 **/
 
 
+$this->includeJSfile('app/views/monitoring.acknowledge.edit.js.php');
+
 $form_list = (new CFormList())
 	->addRow(_('Message'),
 		(new CTextArea('message', '', ['maxlength' => 255]))
@@ -81,6 +83,7 @@ $footer_buttons = makeFormFooter(
 	->setTitle(_('Alarm acknowledgements'))
 	->addItem(
 		(new CForm())
+			->setId('acknowledge_form')
 			->addVar('eventids', $data['eventids'])
 			->addVar('backurl', $data['backurl'])
 			->addItem(
